--- a/.github/workflows/frontend-workflow.yml
+++ b/.github/workflows/frontend-workflow.yml
@@ -29,4 +29,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/tasks-service:${{ env.TAG }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/frontend-service:${{ env.TAG }}
