--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_AUTH_SERVICE_URL=http://192.168.49.2:30002
-REACT_APP_TASKS_SERVICE_URL=http://192.168.49.2:30004
+REACT_APP_AUTH_URL=http://192.168.49.2:30002
+REACT_APP_TASKS_URL=http://192.168.49.2:30004
