updated service endpoints

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_AUTH_SERVICE_URL="http://auth-service:5000"
-REACT_APP_TASKS_SERVICE_URL="http://tasks-service:8080"
+REACT_APP_AUTH_SERVICE_URL="http://auth.local"
+REACT_APP_TASKS_SERVICE_URL="http://tasks.local"
