--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_AUTH_SERVICE_URL="http://auth.local"
-REACT_APP_TASKS_SERVICE_URL="http://tasks.local"
+REACT_APP_AUTH_SERVICE_URL="http://127.0.0.1:41101"
+REACT_APP_TASKS_SERVICE_URL="http://127.0.0.1:37033"
